Added in chords calculator. Schwing.

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>277</width>
-    <height>418</height>
+    <width>296</width>
+    <height>466</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -58,6 +58,39 @@
         <item row="0" column="0">
          <widget class="QTextEdit" name="textScale"/>
         </item>
+        <item row="1" column="0">
+         <widget class="QWidget" name="widget" native="true">
+          <layout class="QHBoxLayout" name="horizontalLayout_2">
+           <property name="spacing">
+            <number>2</number>
+           </property>
+           <property name="leftMargin">
+            <number>0</number>
+           </property>
+           <property name="topMargin">
+            <number>2</number>
+           </property>
+           <property name="rightMargin">
+            <number>0</number>
+           </property>
+           <property name="bottomMargin">
+            <number>0</number>
+           </property>
+           <item>
+            <widget class="QTextEdit" name="chord1"/>
+           </item>
+           <item>
+            <widget class="QTextEdit" name="chord2"/>
+           </item>
+           <item>
+            <widget class="QTextEdit" name="chord3"/>
+           </item>
+           <item>
+            <widget class="QTextEdit" name="minor6"/>
+           </item>
+          </layout>
+         </widget>
+        </item>
        </layout>
       </widget>
       <widget class="QWidget" name="tab_2">
@@ -74,7 +107,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>277</width>
+     <width>296</width>
      <height>22</height>
     </rect>
    </property>
